{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 1008,
  "lineage": "9f3272cd-2d6b-6bd8-ae16-8d7da5a7ceb7",
  "resources": [
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "data",
      "type": "aws_vpc",
      "name": "aft",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:209330743040:vpc/vpc-0b38a5ed7a9f588cd",
            "cidr_block": "192.168.0.0/22",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-038353eaf9d5ea8cb",
                "cidr_block": "192.168.0.0/22",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-04a1c92caf3865505",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b38a5ed7a9f588cd",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03066918acece1a36",
            "owner_id": "209330743040",
            "region": "us-east-1",
            "tags": {
              "Name": "aft-management-vpc",
              "managed_by": "AFT"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "aft_vpc_default_sg",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:209330743040:security-group/sg-00687936c932a982a",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-00687936c932a982a",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "209330743040",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aft-vpc-default-sg"
            },
            "tags_all": {
              "Name": "aft-vpc-default-sg",
              "managed_by": "AFT"
            },
            "vpc_id": "vpc-0b38a5ed7a9f588cd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_eip",
      "name": "aft-vpc-natgw-01",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-085280344c4c7dd9d",
            "arn": "arn:aws:ec2:us-east-1:209330743040:elastic-ip/eipalloc-085280344c4c7dd9d",
            "association_id": "eipassoc-0a365f2f05f85f39f",
            "domain": "vpc",
            "id": "eipalloc-085280344c4c7dd9d",
            "network_border_group": "us-east-1",
            "network_interface": "eni-07cb68694a3e1aa6a",
            "private_dns": "ip-192-168-2-105.ec2.internal",
            "private_ip": "192.168.2.105",
            "public_dns": "ec2-3-89-236-42.compute-1.amazonaws.com",
            "public_ip": "3.89.236.42",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags_all": {
              "managed_by": "AFT"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.aft.data.aws_partition.current"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_eip",
      "name": "aft-vpc-natgw-02",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01d7d67a54c202cc3",
            "arn": "arn:aws:ec2:us-east-1:209330743040:elastic-ip/eipalloc-01d7d67a54c202cc3",
            "association_id": "eipassoc-0dcdafea43ad7abb3",
            "domain": "vpc",
            "id": "eipalloc-01d7d67a54c202cc3",
            "network_border_group": "us-east-1",
            "network_interface": "eni-06527c3bdce2fbeb1",
            "private_dns": "ip-192-168-2-201.ec2.internal",
            "private_ip": "192.168.2.201",
            "public_dns": "ec2-44-217-185-221.compute-1.amazonaws.com",
            "public_ip": "44.217.185.221",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags_all": {
              "managed_by": "AFT"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.aft.data.aws_partition.current"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "aft-vpc-igw",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:209330743040:internet-gateway/igw-02b5260f0070fa442",
            "id": "igw-02b5260f0070fa442",
            "owner_id": "209330743040",
            "region": "us-east-1",
            "tags": {
              "Name": "aft-vpc-igw"
            },
            "tags_all": {
              "Name": "aft-vpc-igw",
              "managed_by": "AFT"
            },
            "vpc_id": "vpc-0b38a5ed7a9f588cd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "aft-vpc-natgw-01",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-085280344c4c7dd9d",
            "association_id": "eipassoc-0a365f2f05f85f39f",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0b76be3bec5277750",
            "network_interface_id": "eni-07cb68694a3e1aa6a",
            "private_ip": "192.168.2.105",
            "public_ip": "3.89.236.42",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-016f8243d8e7f73e2",
            "tags": {
              "Name": "aft-vpc-natgw-01"
            },
            "tags_all": {
              "Name": "aft-vpc-natgw-01",
              "managed_by": "AFT"
            },
            "vpc_id": "vpc-0b38a5ed7a9f588cd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_eip.aft-vpc-natgw-01",
            "module.aft.module.aft_account_request_framework.aws_internet_gateway.aft-vpc-igw",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_public_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "aft-vpc-natgw-02",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01d7d67a54c202cc3",
            "association_id": "eipassoc-0dcdafea43ad7abb3",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-08bec29ce6ebcf880",
            "network_interface_id": "eni-06527c3bdce2fbeb1",
            "private_ip": "192.168.2.201",
            "public_ip": "44.217.185.221",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-002c1e6709cbe5390",
            "tags": {
              "Name": "aft-vpc-natgw-02"
            },
            "tags_all": {
              "Name": "aft-vpc-natgw-02",
              "managed_by": "AFT"
            },
            "vpc_id": "vpc-0b38a5ed7a9f588cd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_eip.aft-vpc-natgw-02",
            "module.aft.module.aft_account_request_framework.aws_internet_gateway.aft-vpc-igw",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_public_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "aft_vpc_private_subnet_01",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:209330743040:route-table/rtb-08249b4ec1f728da1",
            "id": "rtb-08249b4ec1f728da1",
            "owner_id": "209330743040",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b76be3bec5277750",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "aft-vpc-private-subnet-01"
            },
            "tags_all": {
              "Name": "aft-vpc-private-subnet-01",
              "managed_by": "AFT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b38a5ed7a9f588cd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "209330743040",
            "id": "rtb-08249b4ec1f728da1",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_eip.aft-vpc-natgw-01",
            "module.aft.module.aft_account_request_framework.aws_internet_gateway.aft-vpc-igw",
            "module.aft.module.aft_account_request_framework.aws_nat_gateway.aft-vpc-natgw-01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_public_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "aft_vpc_private_subnet_02",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:209330743040:route-table/rtb-0515f832e83d0357a",
            "id": "rtb-0515f832e83d0357a",
            "owner_id": "209330743040",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08bec29ce6ebcf880",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "aft-vpc-private-subnet-02"
            },
            "tags_all": {
              "Name": "aft-vpc-private-subnet-02",
              "managed_by": "AFT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b38a5ed7a9f588cd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "209330743040",
            "id": "rtb-0515f832e83d0357a",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_eip.aft-vpc-natgw-02",
            "module.aft.module.aft_account_request_framework.aws_internet_gateway.aft-vpc-igw",
            "module.aft.module.aft_account_request_framework.aws_nat_gateway.aft-vpc-natgw-02",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_public_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "aft_vpc_public_subnet_01",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:209330743040:route-table/rtb-0e3f971af75d59e7d",
            "id": "rtb-0e3f971af75d59e7d",
            "owner_id": "209330743040",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02b5260f0070fa442",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "aft-vpc-public-subnet-01"
            },
            "tags_all": {
              "Name": "aft-vpc-public-subnet-01",
              "managed_by": "AFT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b38a5ed7a9f588cd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "209330743040",
            "id": "rtb-0e3f971af75d59e7d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_internet_gateway.aft-vpc-igw",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "aft_vpc_private_subnet_01",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c88f0b4eecf1cef5",
            "region": "us-east-1",
            "route_table_id": "rtb-08249b4ec1f728da1",
            "subnet_id": "subnet-00b1782f1c5a9b770"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_eip.aft-vpc-natgw-01",
            "module.aft.module.aft_account_request_framework.aws_internet_gateway.aft-vpc-igw",
            "module.aft.module.aft_account_request_framework.aws_nat_gateway.aft-vpc-natgw-01",
            "module.aft.module.aft_account_request_framework.aws_route_table.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_public_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "aft_vpc_private_subnet_02",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f85011ccb25064a0",
            "region": "us-east-1",
            "route_table_id": "rtb-0515f832e83d0357a",
            "subnet_id": "subnet-01a0ef4e8ef095756"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_eip.aft-vpc-natgw-02",
            "module.aft.module.aft_account_request_framework.aws_internet_gateway.aft-vpc-igw",
            "module.aft.module.aft_account_request_framework.aws_nat_gateway.aft-vpc-natgw-02",
            "module.aft.module.aft_account_request_framework.aws_route_table.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_public_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "aft_vpc_public_subnet_01",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0395965dbec224efd",
            "region": "us-east-1",
            "route_table_id": "rtb-0e3f971af75d59e7d",
            "subnet_id": "subnet-016f8243d8e7f73e2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_internet_gateway.aft-vpc-igw",
            "module.aft.module.aft_account_request_framework.aws_route_table.aft_vpc_public_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_public_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "aft_vpc_public_subnet_02",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-040d4665e987d48d5",
            "region": "us-east-1",
            "route_table_id": "rtb-0e3f971af75d59e7d",
            "subnet_id": "subnet-002c1e6709cbe5390"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_internet_gateway.aft-vpc-igw",
            "module.aft.module.aft_account_request_framework.aws_route_table.aft_vpc_public_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_public_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aft_vpc_default_sg",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:209330743040:security-group/sg-09cf321705340ff35",
            "description": "Allow outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound traffic to internet",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09cf321705340ff35",
            "ingress": [],
            "name": "aft-default-sg",
            "name_prefix": "",
            "owner_id": "209330743040",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "managed_by": "AFT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b38a5ed7a9f588cd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "209330743040",
            "id": "sg-09cf321705340ff35",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aft_vpc_endpoint_sg",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:209330743040:security-group/sg-0db855c93b3da9979",
            "description": "Allow inbound HTTPS traffic and all Outbound",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound traffic to internet",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0db855c93b3da9979",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/22"
                ],
                "description": "Allow inbound SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "192.168.0.0/22"
                ],
                "description": "Allow inbound TLS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "aft-endpoint-sg",
            "name_prefix": "",
            "owner_id": "209330743040",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "managed_by": "AFT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b38a5ed7a9f588cd"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "209330743040",
            "id": "sg-0db855c93b3da9979",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_vpc.aft"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aft_vpc_private_subnet_01",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:209330743040:subnet/subnet-00b1782f1c5a9b770",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00b1782f1c5a9b770",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "209330743040",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "aft-vpc-private-subnet-01"
            },
            "tags_all": {
              "Name": "aft-vpc-private-subnet-01",
              "managed_by": "AFT"
            },
            "vpc_id": "vpc-0b38a5ed7a9f588cd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "209330743040",
            "id": "subnet-00b1782f1c5a9b770",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aft_vpc_private_subnet_02",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:209330743040:subnet/subnet-01a0ef4e8ef095756",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01a0ef4e8ef095756",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "209330743040",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "aft-vpc-private-subnet-02"
            },
            "tags_all": {
              "Name": "aft-vpc-private-subnet-02",
              "managed_by": "AFT"
            },
            "vpc_id": "vpc-0b38a5ed7a9f588cd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "209330743040",
            "id": "subnet-01a0ef4e8ef095756",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aft_vpc_public_subnet_01",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:209330743040:subnet/subnet-016f8243d8e7f73e2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.2.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-016f8243d8e7f73e2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "209330743040",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "aft-vpc-public-subnet-01"
            },
            "tags_all": {
              "Name": "aft-vpc-public-subnet-01",
              "managed_by": "AFT"
            },
            "vpc_id": "vpc-0b38a5ed7a9f588cd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "209330743040",
            "id": "subnet-016f8243d8e7f73e2",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aft_vpc_public_subnet_02",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:209330743040:subnet/subnet-002c1e6709cbe5390",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.2.128/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-002c1e6709cbe5390",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "209330743040",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "aft-vpc-public-subnet-02"
            },
            "tags_all": {
              "Name": "aft-vpc-public-subnet-02",
              "managed_by": "AFT"
            },
            "vpc_id": "vpc-0b38a5ed7a9f588cd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "209330743040",
            "id": "subnet-002c1e6709cbe5390",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "aft_vpc",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:209330743040:vpc/vpc-0b38a5ed7a9f588cd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/22",
            "default_network_acl_id": "acl-07130012becd9acd4",
            "default_route_table_id": "rtb-03066918acece1a36",
            "default_security_group_id": "sg-00687936c932a982a",
            "dhcp_options_id": "dopt-04a1c92caf3865505",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b38a5ed7a9f588cd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03066918acece1a36",
            "owner_id": "209330743040",
            "region": "us-east-1",
            "tags": {
              "Name": "aft-management-vpc"
            },
            "tags_all": {
              "Name": "aft-management-vpc",
              "managed_by": "AFT"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "209330743040",
            "id": "vpc-0b38a5ed7a9f588cd",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "codebuild",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:209330743040:vpc-endpoint/vpce-0a5ad9f5f1d643f63",
            "dns_entry": [
              {
                "dns_name": "vpce-0a5ad9f5f1d643f63-aqs2uhds.codebuild.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0a5ad9f5f1d643f63-aqs2uhds-us-east-1a.codebuild.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0a5ad9f5f1d643f63-aqs2uhds-us-east-1b.codebuild.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "codebuild.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0635247263XLE5SQXG2A"
              },
              {
                "dns_name": "codebuild.us-east-1.api.aws",
                "hosted_zone_id": "Z063692053R1WZ8OL9F9"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0a5ad9f5f1d643f63",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-01ac8858b12b5c9bc",
              "eni-0f8e2f8d4baf8f7ee"
            ],
            "owner_id": "209330743040",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0db855c93b3da9979"
            ],
            "service_name": "com.amazonaws.us-east-1.codebuild",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "192.168.0.91",
                "subnet_id": "subnet-00b1782f1c5a9b770"
              },
              {
                "ipv4": "192.168.1.133",
                "subnet_id": "subnet-01a0ef4e8ef095756"
              }
            ],
            "subnet_ids": [
              "subnet-00b1782f1c5a9b770",
              "subnet-01a0ef4e8ef095756"
            ],
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0b38a5ed7a9f588cd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "209330743040",
            "id": "vpce-0a5ad9f5f1d643f63",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_security_group.aft_vpc_endpoint_sg",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available",
            "module.aft.module.aft_account_request_framework.data.aws_subnets.codebuild",
            "module.aft.module.aft_account_request_framework.data.aws_vpc.aft",
            "module.aft.module.aft_account_request_framework.data.aws_vpc_endpoint_service.codebuild"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "codecommit",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:209330743040:vpc-endpoint/vpce-0f91a2a9d77dd0f5f",
            "dns_entry": [
              {
                "dns_name": "vpce-0f91a2a9d77dd0f5f-6beznvwh.codecommit.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0f91a2a9d77dd0f5f-6beznvwh-us-east-1b.codecommit.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0f91a2a9d77dd0f5f-6beznvwh-us-east-1a.codecommit.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "codecommit.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z06351782T75LEJ4WVQZC"
              },
              {
                "dns_name": "codecommit.us-east-1.api.aws",
                "hosted_zone_id": "Z09014384KD9S23G00FD"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0f91a2a9d77dd0f5f",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-02c46ae9a460b4206",
              "eni-0c66252c343cd6c10"
            ],
            "owner_id": "209330743040",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0db855c93b3da9979"
            ],
            "service_name": "com.amazonaws.us-east-1.codecommit",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "192.168.0.100",
                "subnet_id": "subnet-00b1782f1c5a9b770"
              },
              {
                "ipv4": "192.168.1.118",
                "subnet_id": "subnet-01a0ef4e8ef095756"
              }
            ],
            "subnet_ids": [
              "subnet-00b1782f1c5a9b770",
              "subnet-01a0ef4e8ef095756"
            ],
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0b38a5ed7a9f588cd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "209330743040",
            "id": "vpce-0f91a2a9d77dd0f5f",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_security_group.aft_vpc_endpoint_sg",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available",
            "module.aft.module.aft_account_request_framework.data.aws_subnets.codecommit",
            "module.aft.module.aft_account_request_framework.data.aws_vpc.aft",
            "module.aft.module.aft_account_request_framework.data.aws_vpc_endpoint_service.codecommit"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "codepipeline",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:209330743040:vpc-endpoint/vpce-06b4ca94e0f52ba87",
            "dns_entry": [
              {
                "dns_name": "vpce-06b4ca94e0f52ba87-18z5npmz.codepipeline.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-06b4ca94e0f52ba87-18z5npmz-us-east-1b.codepipeline.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-06b4ca94e0f52ba87-18z5npmz-us-east-1a.codepipeline.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "codepipeline.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z04836732HUQCWNWWVLPH"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-06b4ca94e0f52ba87",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0832f79d3f8112b8e",
              "eni-0c34b2fddeeff265a"
            ],
            "owner_id": "209330743040",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0db855c93b3da9979"
            ],
            "service_name": "com.amazonaws.us-east-1.codepipeline",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "192.168.0.30",
                "subnet_id": "subnet-00b1782f1c5a9b770"
              },
              {
                "ipv4": "192.168.1.52",
                "subnet_id": "subnet-01a0ef4e8ef095756"
              }
            ],
            "subnet_ids": [
              "subnet-00b1782f1c5a9b770",
              "subnet-01a0ef4e8ef095756"
            ],
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0b38a5ed7a9f588cd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "209330743040",
            "id": "vpce-06b4ca94e0f52ba87",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_security_group.aft_vpc_endpoint_sg",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available",
            "module.aft.module.aft_account_request_framework.data.aws_subnets.codepipeline",
            "module.aft.module.aft_account_request_framework.data.aws_vpc.aft",
            "module.aft.module.aft_account_request_framework.data.aws_vpc_endpoint_service.codepipeline"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dynamodb",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:209330743040:vpc-endpoint/vpce-0a5becbc6b54be5fe",
            "cidr_blocks": [
              "35.71.70.0/24",
              "3.218.182.0/24",
              "3.218.180.0/23",
              "35.71.68.0/23",
              "52.94.0.0/22",
              "52.119.224.0/20"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0a5becbc6b54be5fe",
            "ip_address_type": "ipv4",
            "owner_id": "209330743040",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-02cd2c6b",
            "private_dns_enabled": false,
            "region": "us-east-1",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0515f832e83d0357a",
              "rtb-08249b4ec1f728da1",
              "rtb-0e3f971af75d59e7d"
            ],
            "service_name": "com.amazonaws.us-east-1.dynamodb",
            "service_region": "us-east-1",
            "state": "available",
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0b38a5ed7a9f588cd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "209330743040",
            "id": "vpce-0a5becbc6b54be5fe",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_public_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_public_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available",
            "module.aft.module.aft_account_request_framework.data.aws_region.aft-management",
            "module.aft.module.aft_account_request_framework.data.aws_route_tables.aft_private_route_tables",
            "module.aft.module.aft_account_request_framework.data.aws_route_tables.aft_public_route_tables"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "events",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:209330743040:vpc-endpoint/vpce-0b96ee5ba656db538",
            "dns_entry": [
              {
                "dns_name": "vpce-0b96ee5ba656db538-gpjvjg2r.events.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0b96ee5ba656db538-gpjvjg2r-us-east-1a.events.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0b96ee5ba656db538-gpjvjg2r-us-east-1b.events.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "events.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z048305033HXWCX6H0QDG"
              },
              {
                "dns_name": "events.us-east-1.api.aws",
                "hosted_zone_id": "Z04830452RSHAVDLO7DWP"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0b96ee5ba656db538",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-05ba032dba97aa729",
              "eni-0e30fa17733c80e1b"
            ],
            "owner_id": "209330743040",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0db855c93b3da9979"
            ],
            "service_name": "com.amazonaws.us-east-1.events",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "192.168.0.173",
                "subnet_id": "subnet-00b1782f1c5a9b770"
              },
              {
                "ipv4": "192.168.1.67",
                "subnet_id": "subnet-01a0ef4e8ef095756"
              }
            ],
            "subnet_ids": [
              "subnet-00b1782f1c5a9b770",
              "subnet-01a0ef4e8ef095756"
            ],
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0b38a5ed7a9f588cd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "209330743040",
            "id": "vpce-0b96ee5ba656db538",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_security_group.aft_vpc_endpoint_sg",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available",
            "module.aft.module.aft_account_request_framework.data.aws_subnets.events",
            "module.aft.module.aft_account_request_framework.data.aws_vpc.aft",
            "module.aft.module.aft_account_request_framework.data.aws_vpc_endpoint_service.events"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "git-codecommit",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:209330743040:vpc-endpoint/vpce-049cdd837977e8ae6",
            "dns_entry": [
              {
                "dns_name": "vpce-049cdd837977e8ae6-ewsotdtq.git-codecommit.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-049cdd837977e8ae6-ewsotdtq-us-east-1b.git-codecommit.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-049cdd837977e8ae6-ewsotdtq-us-east-1a.git-codecommit.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "git-codecommit.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z09020481VXBO1GR1KQRA"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-049cdd837977e8ae6",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0a22b4211533e736a",
              "eni-0c583c8f6c093af91"
            ],
            "owner_id": "209330743040",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0db855c93b3da9979"
            ],
            "service_name": "com.amazonaws.us-east-1.git-codecommit",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "192.168.0.218",
                "subnet_id": "subnet-00b1782f1c5a9b770"
              },
              {
                "ipv4": "192.168.1.150",
                "subnet_id": "subnet-01a0ef4e8ef095756"
              }
            ],
            "subnet_ids": [
              "subnet-00b1782f1c5a9b770",
              "subnet-01a0ef4e8ef095756"
            ],
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0b38a5ed7a9f588cd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "209330743040",
            "id": "vpce-049cdd837977e8ae6",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_security_group.aft_vpc_endpoint_sg",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available",
            "module.aft.module.aft_account_request_framework.data.aws_subnets.git-codecommit",
            "module.aft.module.aft_account_request_framework.data.aws_vpc.aft",
            "module.aft.module.aft_account_request_framework.data.aws_vpc_endpoint_service.git-codecommit"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "kms",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:209330743040:vpc-endpoint/vpce-07794ebef8a0c6f90",
            "dns_entry": [
              {
                "dns_name": "vpce-07794ebef8a0c6f90-2mbh1k23.kms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-07794ebef8a0c6f90-2mbh1k23-us-east-1a.kms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-07794ebef8a0c6f90-2mbh1k23-us-east-1b.kms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "kms.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z062630517ZQPD70PBFFM"
              },
              {
                "dns_name": "kms.us-east-1.api.aws",
                "hosted_zone_id": "Z09076723JDXFZENDHOU5"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-07794ebef8a0c6f90",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-082cc1593e7ba52b8",
              "eni-0a20feaf3292f051f"
            ],
            "owner_id": "209330743040",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0db855c93b3da9979"
            ],
            "service_name": "com.amazonaws.us-east-1.kms",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "192.168.0.123",
                "subnet_id": "subnet-00b1782f1c5a9b770"
              },
              {
                "ipv4": "192.168.1.57",
                "subnet_id": "subnet-01a0ef4e8ef095756"
              }
            ],
            "subnet_ids": [
              "subnet-00b1782f1c5a9b770",
              "subnet-01a0ef4e8ef095756"
            ],
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0b38a5ed7a9f588cd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "209330743040",
            "id": "vpce-07794ebef8a0c6f90",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_security_group.aft_vpc_endpoint_sg",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available",
            "module.aft.module.aft_account_request_framework.data.aws_subnets.kms",
            "module.aft.module.aft_account_request_framework.data.aws_vpc.aft",
            "module.aft.module.aft_account_request_framework.data.aws_vpc_endpoint_service.kms"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "lambda",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:209330743040:vpc-endpoint/vpce-04b4e0cdd83a41cc8",
            "dns_entry": [
              {
                "dns_name": "vpce-04b4e0cdd83a41cc8-wibh6ofr.lambda.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-04b4e0cdd83a41cc8-wibh6ofr-us-east-1a.lambda.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-04b4e0cdd83a41cc8-wibh6ofr-us-east-1b.lambda.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "lambda.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z04780493JLEY14RNIRS5"
              },
              {
                "dns_name": "lambda.us-east-1.api.aws",
                "hosted_zone_id": "Z06352541R5MM60IMEU5"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-04b4e0cdd83a41cc8",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-004b99d1265e10229",
              "eni-08a24aa687cd2d683"
            ],
            "owner_id": "209330743040",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0db855c93b3da9979"
            ],
            "service_name": "com.amazonaws.us-east-1.lambda",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "192.168.0.67",
                "subnet_id": "subnet-00b1782f1c5a9b770"
              },
              {
                "ipv4": "192.168.1.85",
                "subnet_id": "subnet-01a0ef4e8ef095756"
              }
            ],
            "subnet_ids": [
              "subnet-00b1782f1c5a9b770",
              "subnet-01a0ef4e8ef095756"
            ],
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0b38a5ed7a9f588cd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "209330743040",
            "id": "vpce-04b4e0cdd83a41cc8",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_security_group.aft_vpc_endpoint_sg",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available",
            "module.aft.module.aft_account_request_framework.data.aws_subnets.lambda",
            "module.aft.module.aft_account_request_framework.data.aws_vpc.aft",
            "module.aft.module.aft_account_request_framework.data.aws_vpc_endpoint_service.lambda"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "logs",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:209330743040:vpc-endpoint/vpce-047ce49fee093f4cd",
            "dns_entry": [
              {
                "dns_name": "vpce-047ce49fee093f4cd-j71aftqj.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-047ce49fee093f4cd-j71aftqj-us-east-1b.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-047ce49fee093f4cd-j71aftqj-us-east-1a.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0902611GVPBDTDEMMTU"
              },
              {
                "dns_name": "streaming-logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z09020961QBESD9Q7500B"
              },
              {
                "dns_name": "streaming-logs.us-east-1.api.aws",
                "hosted_zone_id": "Z06362022I1NFTQ4RZHJ9"
              },
              {
                "dns_name": "logs.us-east-1.api.aws",
                "hosted_zone_id": "Z04846043M751D6IXN9YH"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-047ce49fee093f4cd",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-04ed6fb704d0ff5ed",
              "eni-0ae88ec2f95aa8a87"
            ],
            "owner_id": "209330743040",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0db855c93b3da9979"
            ],
            "service_name": "com.amazonaws.us-east-1.logs",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "192.168.0.246",
                "subnet_id": "subnet-00b1782f1c5a9b770"
              },
              {
                "ipv4": "192.168.1.147",
                "subnet_id": "subnet-01a0ef4e8ef095756"
              }
            ],
            "subnet_ids": [
              "subnet-00b1782f1c5a9b770",
              "subnet-01a0ef4e8ef095756"
            ],
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0b38a5ed7a9f588cd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "209330743040",
            "id": "vpce-047ce49fee093f4cd",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_security_group.aft_vpc_endpoint_sg",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available",
            "module.aft.module.aft_account_request_framework.data.aws_subnets.logs",
            "module.aft.module.aft_account_request_framework.data.aws_vpc.aft",
            "module.aft.module.aft_account_request_framework.data.aws_vpc_endpoint_service.logs"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "organizations",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:209330743040:vpc-endpoint/vpce-00c0c5b0ff355c554",
            "dns_entry": [
              {
                "dns_name": "vpce-00c0c5b0ff355c554-2d1jexl7.organizations.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-00c0c5b0ff355c554-2d1jexl7-us-east-1a.organizations.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-00c0c5b0ff355c554-2d1jexl7-us-east-1b.organizations.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "organizations.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0636842FPJ6X01OS6W9"
              },
              {
                "dns_name": "organizations.us-east-1.api.aws",
                "hosted_zone_id": "Z04769453E5RQCQV5RLR3"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-00c0c5b0ff355c554",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-049b467f05bd1a6bb",
              "eni-07f2d63bac1addbb5"
            ],
            "owner_id": "209330743040",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0db855c93b3da9979"
            ],
            "service_name": "com.amazonaws.us-east-1.organizations",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "192.168.0.125",
                "subnet_id": "subnet-00b1782f1c5a9b770"
              },
              {
                "ipv4": "192.168.1.209",
                "subnet_id": "subnet-01a0ef4e8ef095756"
              }
            ],
            "subnet_ids": [
              "subnet-00b1782f1c5a9b770",
              "subnet-01a0ef4e8ef095756"
            ],
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0b38a5ed7a9f588cd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "209330743040",
            "id": "vpce-00c0c5b0ff355c554",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_security_group.aft_vpc_endpoint_sg",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available",
            "module.aft.module.aft_account_request_framework.data.aws_region.aft-management",
            "module.aft.module.aft_account_request_framework.data.aws_subnets.organizations",
            "module.aft.module.aft_account_request_framework.data.aws_vpc.aft",
            "module.aft.module.aft_account_request_framework.data.aws_vpc_endpoint_service.organizations"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:209330743040:vpc-endpoint/vpce-0e989df985c8cd6d9",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0e989df985c8cd6d9",
            "ip_address_type": "ipv4",
            "owner_id": "209330743040",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "region": "us-east-1",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0515f832e83d0357a",
              "rtb-08249b4ec1f728da1",
              "rtb-0e3f971af75d59e7d"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "service_region": "us-east-1",
            "state": "available",
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0b38a5ed7a9f588cd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "209330743040",
            "id": "vpce-0e989df985c8cd6d9",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_public_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_public_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available",
            "module.aft.module.aft_account_request_framework.data.aws_region.aft-management",
            "module.aft.module.aft_account_request_framework.data.aws_route_tables.aft_private_route_tables",
            "module.aft.module.aft_account_request_framework.data.aws_route_tables.aft_public_route_tables"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "servicecatalog",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:209330743040:vpc-endpoint/vpce-0d7688d1a760f8dd0",
            "dns_entry": [
              {
                "dns_name": "vpce-0d7688d1a760f8dd0-661io1l3.servicecatalog.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0d7688d1a760f8dd0-661io1l3-us-east-1a.servicecatalog.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0d7688d1a760f8dd0-661io1l3-us-east-1b.servicecatalog.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "servicecatalog.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z04775673IKURUVL7LMDR"
              },
              {
                "dns_name": "servicecatalog.us-east-1.api.aws",
                "hosted_zone_id": "Z04764932GNS0MOEBY6QJ"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0d7688d1a760f8dd0",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-06753be0ecf48c93e",
              "eni-0c41d5d50267e16f5"
            ],
            "owner_id": "209330743040",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0db855c93b3da9979"
            ],
            "service_name": "com.amazonaws.us-east-1.servicecatalog",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "192.168.0.233",
                "subnet_id": "subnet-00b1782f1c5a9b770"
              },
              {
                "ipv4": "192.168.1.166",
                "subnet_id": "subnet-01a0ef4e8ef095756"
              }
            ],
            "subnet_ids": [
              "subnet-00b1782f1c5a9b770",
              "subnet-01a0ef4e8ef095756"
            ],
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0b38a5ed7a9f588cd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "209330743040",
            "id": "vpce-0d7688d1a760f8dd0",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_security_group.aft_vpc_endpoint_sg",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available",
            "module.aft.module.aft_account_request_framework.data.aws_subnets.servicecatalog",
            "module.aft.module.aft_account_request_framework.data.aws_vpc.aft",
            "module.aft.module.aft_account_request_framework.data.aws_vpc_endpoint_service.servicecatalog"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sns",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:209330743040:vpc-endpoint/vpce-03db8b439fcce64f3",
            "dns_entry": [
              {
                "dns_name": "vpce-03db8b439fcce64f3-w8e5rvc7.sns.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-03db8b439fcce64f3-w8e5rvc7-us-east-1a.sns.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-03db8b439fcce64f3-w8e5rvc7-us-east-1b.sns.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "sns.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z049096733R0M453Q6PQH"
              },
              {
                "dns_name": "sns.us-east-1.api.aws",
                "hosted_zone_id": "Z0475273NGQAOMTSJJJ7"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-03db8b439fcce64f3",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0073a6992e8b8fcc5",
              "eni-06cc7db3c74c06d6b"
            ],
            "owner_id": "209330743040",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0db855c93b3da9979"
            ],
            "service_name": "com.amazonaws.us-east-1.sns",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "192.168.0.104",
                "subnet_id": "subnet-00b1782f1c5a9b770"
              },
              {
                "ipv4": "192.168.1.250",
                "subnet_id": "subnet-01a0ef4e8ef095756"
              }
            ],
            "subnet_ids": [
              "subnet-00b1782f1c5a9b770",
              "subnet-01a0ef4e8ef095756"
            ],
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0b38a5ed7a9f588cd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "209330743040",
            "id": "vpce-03db8b439fcce64f3",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_security_group.aft_vpc_endpoint_sg",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available",
            "module.aft.module.aft_account_request_framework.data.aws_subnets.sns",
            "module.aft.module.aft_account_request_framework.data.aws_vpc.aft",
            "module.aft.module.aft_account_request_framework.data.aws_vpc_endpoint_service.sns"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sqs",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:209330743040:vpc-endpoint/vpce-0ede9e3ed0768a948",
            "dns_entry": [
              {
                "dns_name": "vpce-0ede9e3ed0768a948-lshs9vyv.sqs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0ede9e3ed0768a948-lshs9vyv-us-east-1b.sqs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0ede9e3ed0768a948-lshs9vyv-us-east-1a.sqs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "sqs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z09026122X5SMZ8W7LLEI"
              },
              {
                "dns_name": "sqs.us-east-1.api.aws",
                "hosted_zone_id": "Z047543930DZS0FT7EG1R"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0ede9e3ed0768a948",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-036a1d6185b651c0b",
              "eni-0660c3d2b2a132f3d"
            ],
            "owner_id": "209330743040",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0db855c93b3da9979"
            ],
            "service_name": "com.amazonaws.us-east-1.sqs",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "192.168.0.39",
                "subnet_id": "subnet-00b1782f1c5a9b770"
              },
              {
                "ipv4": "192.168.1.186",
                "subnet_id": "subnet-01a0ef4e8ef095756"
              }
            ],
            "subnet_ids": [
              "subnet-00b1782f1c5a9b770",
              "subnet-01a0ef4e8ef095756"
            ],
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0b38a5ed7a9f588cd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "209330743040",
            "id": "vpce-0ede9e3ed0768a948",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_security_group.aft_vpc_endpoint_sg",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available",
            "module.aft.module.aft_account_request_framework.data.aws_subnets.sqs",
            "module.aft.module.aft_account_request_framework.data.aws_vpc.aft",
            "module.aft.module.aft_account_request_framework.data.aws_vpc_endpoint_service.sqs"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:209330743040:vpc-endpoint/vpce-049aef5dd1a4bec8a",
            "dns_entry": [
              {
                "dns_name": "vpce-049aef5dd1a4bec8a-bofv3d1e.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-049aef5dd1a4bec8a-bofv3d1e-us-east-1a.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-049aef5dd1a4bec8a-bofv3d1e-us-east-1b.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssm.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0909061277UEE14PJROR"
              },
              {
                "dns_name": "ssm.us-east-1.api.aws",
                "hosted_zone_id": "Z09090602BB6S0MYF5O5V"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-049aef5dd1a4bec8a",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-03d0ff318fb5653dd",
              "eni-0856f4a2bc4b71e3d"
            ],
            "owner_id": "209330743040",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0db855c93b3da9979"
            ],
            "service_name": "com.amazonaws.us-east-1.ssm",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "192.168.0.134",
                "subnet_id": "subnet-00b1782f1c5a9b770"
              },
              {
                "ipv4": "192.168.1.97",
                "subnet_id": "subnet-01a0ef4e8ef095756"
              }
            ],
            "subnet_ids": [
              "subnet-00b1782f1c5a9b770",
              "subnet-01a0ef4e8ef095756"
            ],
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0b38a5ed7a9f588cd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "209330743040",
            "id": "vpce-049aef5dd1a4bec8a",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_security_group.aft_vpc_endpoint_sg",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available",
            "module.aft.module.aft_account_request_framework.data.aws_subnets.ssm",
            "module.aft.module.aft_account_request_framework.data.aws_vpc.aft",
            "module.aft.module.aft_account_request_framework.data.aws_vpc_endpoint_service.ssm"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "states",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:209330743040:vpc-endpoint/vpce-0807d7916aa2ad5d3",
            "dns_entry": [
              {
                "dns_name": "vpce-0807d7916aa2ad5d3-obgnj1b8.states.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0807d7916aa2ad5d3-obgnj1b8-us-east-1a.states.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0807d7916aa2ad5d3-obgnj1b8-us-east-1b.states.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "states.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z04841701AUVRX0QAM8ES"
              },
              {
                "dns_name": "states-fips.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z04754742ZKGATF6EPPU1"
              },
              {
                "dns_name": "states-fips.us-east-1.api.aws",
                "hosted_zone_id": "Z04903833SWAOSKXGHPC0"
              },
              {
                "dns_name": "states.us-east-1.api.aws",
                "hosted_zone_id": "Z06366611ADGT930VD5GW"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0807d7916aa2ad5d3",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-08a18ffaeb779df25",
              "eni-08bf6993d052fca85"
            ],
            "owner_id": "209330743040",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0db855c93b3da9979"
            ],
            "service_name": "com.amazonaws.us-east-1.states",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "192.168.0.191",
                "subnet_id": "subnet-00b1782f1c5a9b770"
              },
              {
                "ipv4": "192.168.1.73",
                "subnet_id": "subnet-01a0ef4e8ef095756"
              }
            ],
            "subnet_ids": [
              "subnet-00b1782f1c5a9b770",
              "subnet-01a0ef4e8ef095756"
            ],
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0b38a5ed7a9f588cd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "209330743040",
            "id": "vpce-0807d7916aa2ad5d3",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_security_group.aft_vpc_endpoint_sg",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available",
            "module.aft.module.aft_account_request_framework.data.aws_subnets.states",
            "module.aft.module.aft_account_request_framework.data.aws_vpc.aft",
            "module.aft.module.aft_account_request_framework.data.aws_vpc_endpoint_service.states"
          ]
        }
      ]
    },
    {
      "module": "module.aft.module.aft_account_request_framework",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sts",
      "provider": "module.aft.provider[\"registry.terraform.io/hashicorp/aws\"].aft_management",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:209330743040:vpc-endpoint/vpce-0d77df41f660dfc6d",
            "dns_entry": [
              {
                "dns_name": "vpce-0d77df41f660dfc6d-oj3a2nas.sts.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0d77df41f660dfc6d-oj3a2nas-us-east-1b.sts.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0d77df41f660dfc6d-oj3a2nas-us-east-1a.sts.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "sts.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z04909251P6TNWKAWM2C4"
              },
              {
                "dns_name": "sts.us-east-1.api.aws",
                "hosted_zone_id": "Z04891981QTEZ0RZMB8UA"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0d77df41f660dfc6d",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0b3b36e41a9c61ac6",
              "eni-0c892557f9492a2df"
            ],
            "owner_id": "209330743040",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0db855c93b3da9979"
            ],
            "service_name": "com.amazonaws.us-east-1.sts",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "192.168.0.154",
                "subnet_id": "subnet-00b1782f1c5a9b770"
              },
              {
                "ipv4": "192.168.1.40",
                "subnet_id": "subnet-01a0ef4e8ef095756"
              }
            ],
            "subnet_ids": [
              "subnet-00b1782f1c5a9b770",
              "subnet-01a0ef4e8ef095756"
            ],
            "tags_all": {
              "managed_by": "AFT"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0b38a5ed7a9f588cd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "209330743040",
            "id": "vpce-0d77df41f660dfc6d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.aft.data.aws_partition.current",
            "module.aft.module.aft_account_request_framework.aws_security_group.aft_vpc_endpoint_sg",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_01",
            "module.aft.module.aft_account_request_framework.aws_subnet.aft_vpc_private_subnet_02",
            "module.aft.module.aft_account_request_framework.aws_vpc.aft_vpc",
            "module.aft.module.aft_account_request_framework.data.aws_availability_zones.available",
            "module.aft.module.aft_account_request_framework.data.aws_subnets.sts",
            "module.aft.module.aft_account_request_framework.data.aws_vpc.aft",
            "module.aft.module.aft_account_request_framework.data.aws_vpc_endpoint_service.sts"
          ]
        }
      ]
    }
  ]
}